Fix article details instagram images too width spacing in mobile view
E.g. http://stage.famitsu.hk:3000/Contributor/186023/%E5%90%B3%E5%8D%83%E8%AA%9E5

--- a/web/assets/css/common.css
+++ b/web/assets/css/common.css
@@ -512,11 +512,13 @@ a {
   }
 }
 
-.homepage_instagram_block {
+.instagram_block, .homepage_instagram_block {
   width: 300px;
-  height: 375px;
   margin-left: auto;
   margin-right: auto;
+}
+.homepage_instagram_block {
+  height: 375px;
 }
 
 @media (max-width: 767px) {
